@@ -72,7 +72,17 @@
 
 /* signed and unsigned int must be at least 32 bits wide */
 #define sint   signed   int
+
+
+//Para haiku
+#ifdef HAIKU_OS
+typedef unsigned int uint;
+
+#else
+
 #define uint   unsigned int
+
+#endif
 
 
 #if M68K_USE_64_BIT
